# tg-alert-kit

./: .gitignore  HANDLER.md  INWENTARYZACJA.md  README.md  STYL.md  pyproject.toml
cards/: card_template.html
tests/: test_actions.py  test_atom.py  test_buttons.py  test_escape.py  test_pii.py  test_proposals.py  test_queue.py  test_real_types.py  test_render.py  test_text_alert.py
tg_alert_kit/: __init__.py  __main__.py  actions.py  atom.py  buttons.py  card.py  cli.py  escape.py  icons.py  notify.py  parse_proposals.py  pii.py  presets.py  queue.py  render.py  sender.py  text_alert.py
